[package]
name = "tmix"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.26.1"
log = "0.4.17"
pulse = { package="libpulse-binding", version = "2.26.0" }
simple_logger = "4.1.0"
tui = "0.19.0"
